# INQUIRA

./: .gitignore  README.md  package-lock.json  package.json  requirements.txt  tailwind.config.js
api/: index.py  pyproject.toml  testfile.py
api/src/: auth.py  main.py  twoFA.py
api/src/api/: .sample_env  Dockerfile  main.py
api/src/backend/: requirements.txt
api/utils/: 2fa.py  twoFA.py
backend/Subscribe/: app.js  package-lock.json  package.json
public/: index.html
src/: App.jsx  firebase.js
src/backend-integration/: app.py
src/components/: AboutUs.jsx  Body.jsx  Bot.jsx  Card.jsx  Collaborators.jsx  ContactUs.jsx  Explore.jsx  Faqs.jsx  Features.jsx  FilePicker.jsx  Footer.jsx  Guide.jsx  Header.jsx  Info.jsx  Landing.jsx  Login.jsx  MainContainer.jsx
src/utils/: AuthContext.jsx  constants.jsx
