[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Siddharth Upadhyay <Siddharthu333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.16"
langchain-community = "^0.2.16"
huggingface-hub = "^0.24.6"
Unidecode = "^1.3.8"
chromadb = "^0.5.5"
langchain-huggingface = "^0.0.3"
flask = "^3.0.3"
flask-cors = "^5.0.0"
pypdf2 = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
